# investigraph-etl

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  .prefectignore  CHANGELOG.md  Dockerfile  Makefile  README.md  benchmark.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  ec_meetings.py  ec_meetings_standalone.py  investigraph.env  metadata.yml  prefect.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: build-docker.yml  pytest.yml  python.yml
datasets/ec_meetings/: ec_meetings_standalone.py  parse.py
datasets/eu_authorities/: parse.py
datasets/gdho/: config.yml  parse.py
investigraph/: __init__.py  aggregate.py  block.py  cache.py  catalog.py  cli.py  context.py  exceptions.py  extract.py  fetch.py  inspect.py  load.py  logging.py  model.py  parse.py  pipeline.py  prefect.py  settings.py  transform.py  types.py  util.py
investigraph/logic/: aggregate.py  extract.py  fetch.py  load.py  requests.py  seed.py  transform.py
investigraph/model/: __init__.py  block.py  config.py  context.py  dataset.py  flow.py  mapping.py  mixins.py  resolver.py  source.py  stage.py
tests/: conftest.py  test_blocks.py  test_cache.py  test_catalog.py  test_cli.py  test_config.py  test_extract.py  test_fetch.py  test_load.py  test_model.py  test_model_mapping.py  test_pipeline.py  test_resolve.py  test_seed.py  test_source.py  test_util.py  util.py
tests/fixtures/: all-authorities.csv  catalog.yml  catalog_full.yml  config.yml  custom.py  ec-meetings.xlsx  eu_authorities.custom.yml  eu_authorities.local.yml
tests/fixtures/ec_meetings/: config.yml  parse.py  transform.py
tests/fixtures/eu_authorities/: config.yml  custom.py  transform.py
tests/fixtures/gdho/: config.local.yml  config.yml  organizations.csv
