[tool.poetry]
name = "investigraph"
version = "0.5.2"
description = "etl pipeline for investigations with follow the money data"
authors = ["Simon Wörpel <simon@investigativedata.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://investigraph.dev"
repository = "https://github.com/investigativedata/investigraph-etl"
documentation = "https://docs.investigraph.dev"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
packages = [{include = "investigraph"}]

[tool.poetry.scripts]
investigraph = "investigraph.cli:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/investigativedata/investigraph-etl/issues"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
cachelib = "^0.10.2"
dateparser = "^1.1.8"
fakeredis = "^2.20.0"
followthemoney-store = "^3.0.6"
html2text = "^2024.2.26"
pandas = "^2.2.1"
pantomime = "^0.6.1"
prefect = "^2.16.3"
prefect-dask = "^0.2.6"
prefect-ray = "^0.3.3"
ray = "^2.9.3"
redis = "^5.0.1"
requests = "^2.31.0"
tabulate = "^0.9.0"
typer = "^0.9.0"
runpandarun = "^0.4.2"
xlrd = "^2.0.1"
ftmq = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pytest-env = ">=1.1.1"
pytest = ">=7.4.3,<9.0.0"
pytest-cov = "^4.1.0"
black = ">=23.11,<25.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
flake8 = ">=6.1,<8.0"
pytest-xdist = "^3.4.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
