[tool.poetry]
name = "investigraph"
version = "0.6.1"
description = "etl pipeline for investigations with follow the money data"
authors = ["Simon Wörpel <simon@investigativedata.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://investigraph.dev"
repository = "https://github.com/investigativedata/investigraph-etl"
documentation = "https://docs.investigraph.dev"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "investigraph" }]

[tool.poetry.scripts]
investigraph = "investigraph.cli:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/investigativedata/investigraph-etl/issues"

[tool.poetry.dependencies]
python = ">=3.11,<4"
prefect = "^3.0.1"
ftmq = "^0.6.14"
anystore = "^0.1.11"
runpandarun = "^0.5.1"
cachelib = "^0.13.0"
dateparser = "^1.2.0"
html2text = "^2024.2.26"
pandas = "^2.2.2"
pantomime = "^0.6.1"
fakeredis = "^2.24.1"

[tool.poetry.group.dev.dependencies]
pytest-env = ">=1.1.1"
pytest = ">=7.4.3,<9.0.0"
pytest-cov = ">=4.1,<7.0"
black = ">=23.11,<25.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = ">=3.5,<5.0"
flake8 = ">=6.1,<8.0"
pytest-xdist = "^3.4.0"
bump2version = "^1.0.1"
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
DEBUG = 1
PREFECT_HOME = ".test"
INVESTIGRAPH_REDIS = 0
INVESTIGRAPH_DATA_ROOT = ".test"
