[metadata]
name = investigraph-etl
version = file: VERSION
description = etl pipeline for investigations with follow the money data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Simon Wörpel
author_email = simon@investigativedata.org
url = https://github.com/investigativedata/investigraph-etl
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires:
    banal==1.0.6
    cachelib==0.10.2
    dateparser==1.1.8
    fakeredis==2.11.2
    followthemoney==3.3.0
    followthemoney-store==3.0.3
    html2text==2020.1.16
    nomenklatura==2.9.3
    pandas==2.0.0
    pantomime==0.6.0
    prefect==2.10.11
    prefect-dask==0.2.4
    redis==4.5.4
    requests==2.28.2
    smart-open[all]==6.3.0
    SQLAlchemy==1.4.48
    tabulate==0.9.0
    typer==0.9.0
    zavod==0.6.1

[options.extras_require]
dev =
    pytest-env==0.8.1
    bump2version==1.0.1
    moto==4.1.11

[options.entry_points]
console_scripts =
    investigraph = investigraph.cli:cli

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
